tests/snapshots/examples_fixtures/type_classes__custom_handled_tracer_example.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/custom_handled_tracer_example.flx
== compile ==
failed (compile)
== diagnostics ==
error[E402]: Missing Effect Handler Arm

Handler for `Console` is missing operations: println.

  examples/type_classes/CustomHandledTracerExample/App/Main.flx:9:9
   |
 9 |         Tracer.trace(h, "starting up")
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |             handle Clock {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
11 |                 now(resume) -> resume(0)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |             }
   | ^^^^^^^^^^^^^

Hint:
  Add 1 arm(s) to the handle block:

    println(resume, _arg1) -> resume(())

Tip: `resume(())` consumes the operation and discards its effect; use it when the handler only cares about observing the call.
== stdout ==
<not executed>
